--- a/exxon_mobil.ipynb
+++ b/exxon_mobil.ipynb
@@ -73,183 +73,7 @@
     "        data.append(json.loads(line))"
    ]
   },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "7ffb3d4f-05dc-421e-865a-f671418b3e15",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "\"I'm thinking about writing a satire where the U.S. Congress is blocked from taking action on the climate by a Senator who owns a coal company, lives on a yacht and speaks daily with Exxon lobbyists -- but I'm worried people will think it's too on the nose. 😔\""
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data[2]['referenced_tweets'][0]['text']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "047709f8-ac5a-4db6-8faa-aad6ecb46d71",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'type': 'retweeted',\n",
-       "  'id': '1476696095963058177',\n",
-       "  'lang': 'en',\n",
-       "  'possibly_sensitive': False,\n",
-       "  'author_id': '2181341294',\n",
-       "  'text': '@ScottGrimnes @MaMan564 @SoFarFletched ‘We’ started calling it ‘climate change’ when Exxon Mobile did a very successful PR campaign in the 90’s. Apparently ‘global warming’ is too specific and scary. But It’s global warming. https://t.co/WPetiWDQG3',\n",
-       "  'entities': {'annotations': [{'start': 85,\n",
-       "     'end': 96,\n",
-       "     'probability': 0.581,\n",
-       "     'type': 'Organization',\n",
-       "     'normalized_text': 'Exxon Mobile'}],\n",
-       "   'urls': [{'start': 225,\n",
-       "     'end': 248,\n",
-       "     'url': 'https://t.co/WPetiWDQG3',\n",
-       "     'expanded_url': 'http://Exxonknew.org',\n",
-       "     'display_url': 'Exxonknew.org'}],\n",
-       "   'mentions': [{'start': 0,\n",
-       "     'end': 13,\n",
-       "     'username': 'ScottGrimnes',\n",
-       "     'id': '847597746043342848',\n",
-       "     'verified': False,\n",
-       "     'created_at': '2017-03-30T23:53:45.000Z',\n",
-       "     'location': 'Arizona, USA',\n",
-       "     'public_metrics': {'followers_count': 357,\n",
-       "      'following_count': 708,\n",
-       "      'tweet_count': 19119,\n",
-       "      'listed_count': 0},\n",
-       "     'name': 'Scott Grimnes',\n",
-       "     'description': 'PNW boy living in the Desert. Life is about Balance.',\n",
-       "     'protected': False,\n",
-       "     'url': '',\n",
-       "     'profile_image_url': 'https://pbs.twimg.com/profile_images/1274786865522991105/PXfSI9wF_normal.jpg'},\n",
-       "    {'start': 14,\n",
-       "     'end': 23,\n",
-       "     'username': 'MaMan564',\n",
-       "     'id': '1269846144869298176',\n",
-       "     'verified': False,\n",
-       "     'created_at': '2020-06-08T04:18:20.000Z',\n",
-       "     'public_metrics': {'followers_count': 141,\n",
-       "      'following_count': 695,\n",
-       "      'tweet_count': 5747,\n",
-       "      'listed_count': 0},\n",
-       "     'name': 'Ma Man',\n",
-       "     'description': '',\n",
-       "     'protected': False,\n",
-       "     'url': '',\n",
-       "     'profile_image_url': 'https://abs.twimg.com/sticky/default_profile_images/default_profile_normal.png'},\n",
-       "    {'start': 24,\n",
-       "     'end': 38,\n",
-       "     'username': 'SoFarFletched',\n",
-       "     'id': '2251014270',\n",
-       "     'verified': False,\n",
-       "     'created_at': '2013-12-17T21:48:49.000Z',\n",
-       "     'location': 'Huntington Beach, CA',\n",
-       "     'public_metrics': {'followers_count': 357,\n",
-       "      'following_count': 874,\n",
-       "      'tweet_count': 1304,\n",
-       "      'listed_count': 4},\n",
-       "     'name': 'Jason Fletcher',\n",
-       "     'description': 'Director, Digital at Mastercard Luxury Card | Lifestyle Fintech | Performance Marketing | Nutella Hater | Denver Sports Fan | Club🏠: Jason.Fletcher',\n",
-       "     'protected': False,\n",
-       "     'url': '',\n",
-       "     'profile_image_url': 'https://pbs.twimg.com/profile_images/1076940030742953984/TxivOKeT_normal.jpg',\n",
-       "     'pinned_tweet_id': '1272228402662010881'}]},\n",
-       "  'referenced_tweets': [{'type': 'replied_to', 'id': '1476684617755160580'}],\n",
-       "  'created_at': '2021-12-30T23:25:59.000Z',\n",
-       "  'source': 'Twitter for iPhone',\n",
-       "  'in_reply_to_user_id': '847597746043342848',\n",
-       "  'reply_settings': 'everyone',\n",
-       "  'conversation_id': '1476664863980077057',\n",
-       "  'context_annotations': [{'domain': {'id': '45',\n",
-       "     'name': 'Brand Vertical',\n",
-       "     'description': 'Top level entities that describe a Brands industry'},\n",
-       "    'entity': {'id': '781974597474263040', 'name': 'Energy'}},\n",
-       "   {'domain': {'id': '46',\n",
-       "     'name': 'Brand Category',\n",
-       "     'description': 'Categories within Brand Verticals that narrow down the scope of Brands'},\n",
-       "    'entity': {'id': '781974596723412992', 'name': 'Gas/Oil'}},\n",
-       "   {'domain': {'id': '47',\n",
-       "     'name': 'Brand',\n",
-       "     'description': 'Brands and Companies'},\n",
-       "    'entity': {'id': '10026377931', 'name': 'ExxonMobil'}},\n",
-       "   {'domain': {'id': '45',\n",
-       "     'name': 'Brand Vertical',\n",
-       "     'description': 'Top level entities that describe a Brands industry'},\n",
-       "    'entity': {'id': '781974597474263040', 'name': 'Energy'}},\n",
-       "   {'domain': {'id': '46',\n",
-       "     'name': 'Brand Category',\n",
-       "     'description': 'Categories within Brand Verticals that narrow down the scope of Brands'},\n",
-       "    'entity': {'id': '781974596723412992', 'name': 'Gas/Oil'}},\n",
-       "   {'domain': {'id': '47',\n",
-       "     'name': 'Brand',\n",
-       "     'description': 'Brands and Companies'},\n",
-       "    'entity': {'id': '10039822051', 'name': 'Exxon'}}],\n",
-       "  'public_metrics': {'retweet_count': 7,\n",
-       "   'reply_count': 1,\n",
-       "   'like_count': 31,\n",
-       "   'quote_count': 0},\n",
-       "  'author': {'verified': False,\n",
-       "   'created_at': '2013-11-08T03:03:46.000Z',\n",
-       "   'public_metrics': {'followers_count': 585,\n",
-       "    'following_count': 4999,\n",
-       "    'tweet_count': 9011,\n",
-       "    'listed_count': 6},\n",
-       "   'name': 'CARPE_DMT',\n",
-       "   'description': 'play MAD DOG 2021 https://t.co/EP5AkVshrF',\n",
-       "   'protected': False,\n",
-       "   'entities': {'url': {'urls': [{'start': 0,\n",
-       "       'end': 23,\n",
-       "       'url': 'https://t.co/wL90PAKdfG',\n",
-       "       'expanded_url': 'https://virtualreality.pizza',\n",
-       "       'display_url': 'virtualreality.pizza'}]},\n",
-       "    'description': {'urls': [{'start': 18,\n",
-       "       'end': 41,\n",
-       "       'url': 'https://t.co/EP5AkVshrF',\n",
-       "       'expanded_url': 'https://www.oculus.com/experiences/quest/4280512035321327/',\n",
-       "       'display_url': 'oculus.com/experiences/qu…'}]}},\n",
-       "   'username': 'Carpe_DMT',\n",
-       "   'url': 'https://t.co/wL90PAKdfG',\n",
-       "   'profile_image_url': 'https://pbs.twimg.com/profile_images/1411076556986986498/ssRjQ9bA_normal.jpg',\n",
-       "   'id': '2181341294',\n",
-       "   'pinned_tweet_id': '1441988376643584002'},\n",
-       "  'in_reply_to_user': {'verified': False,\n",
-       "   'created_at': '2017-03-30T23:53:45.000Z',\n",
-       "   'location': 'Arizona, USA',\n",
-       "   'public_metrics': {'followers_count': 357,\n",
-       "    'following_count': 708,\n",
-       "    'tweet_count': 19119,\n",
-       "    'listed_count': 0},\n",
-       "   'name': 'Scott Grimnes',\n",
-       "   'description': 'PNW boy living in the Desert. Life is about Balance.',\n",
-       "   'protected': False,\n",
-       "   'username': 'ScottGrimnes',\n",
-       "   'url': '',\n",
-       "   'profile_image_url': 'https://pbs.twimg.com/profile_images/1274786865522991105/PXfSI9wF_normal.jpg',\n",
-       "   'id': '847597746043342848'}}]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data[4]['referenced_tweets']"
-   ]
-  },
   {
    "cell_type": "markdown",
    "id": "461a17e1-b7bd-41f8-852d-3260c48784ee",
@@ -364,85 +188,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70882ac5-c59d-4020-b77f-dae8dc32b489",
-   "metadata": {},
-   "source": [
-    " ##### 'id', 'author_id', 'conversation_id', 'author'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f215aeb7-1bd4-49db-a770-1d6e522cda0e",
-   "metadata": {},
-   "source": [
-    "#create lists for id, author id and conversation\n",
-    "lst_id = []\n",
-    "lst_lang = []\n",
-    "lst_author_id = []\n",
-    "lst_conversation_id = []\n",
-    "for i in data:\n",
-    "    lst_id.append(i['id'])\n",
-    "    lst_lang.append(i['lang'])\n",
-    "    lst_author_id.append(i['author_id'])\n",
-    "    lst_conversation_id.append(i['conversation_id'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c6a95d19-4d5a-49ca-9f34-d4fd0a8c2fda",
-   "metadata": {},
-   "source": [
-    "There are too much info in author dictionary"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "708a2888-841e-4b39-a577-8747baa49831",
-   "metadata": {},
-   "source": [
-    "#lst verified or not, author name and author username\n",
-    "lst_author_verified = []\n",
-    "lst_author_name = []\n",
-    "lst_author_username = []\n",
-    "for i in data:\n",
-    "    lst_author_verified.append(i['author']['verified'])\n",
-    "    lst_author_name.append(i['author']['name'])\n",
-    "    lst_author_username.append(i['author']['username'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "26dc9a84-57a0-4a0c-b312-945a46893063",
-   "metadata": {},
-   "source": [
-    " ##### Make creation time"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "55da8569-d0c0-49e9-ba50-f26adc9b846c",
-   "metadata": {},
-   "source": [
-    "#list creation time\n",
-    "lst_twt_creation_time = []\n",
-    "for i in data:\n",
-    "    lst_twt_creation_time.append(i['created_at'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "78a61f6d-633b-4c1d-a9ea-0599dfeb3afd",
    "metadata": {},
    "source": [
     "##### Put what we have in one dataframe"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c27356dd-560c-4c38-833e-1ee09bc44f64",
-   "metadata": {},
-   "source": [
-    "lst_text,lst_id, lst_author_id,lst_conversation_id,lst_author_verified, lst_author_name, lst_author_username,lst_twt_creation_time"
    ]
   },
   {
@@ -782,22 +531,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e458abf3-644f-47bd-b8c6-43f7d4491501",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73fc558d-1a18-4d40-8840-b0638ed6d41a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "id": "bef3a4db-2aa1-412a-b4b6-6a07696d38d7",
    "metadata": {},
@@ -886,13 +619,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "f7a3bd80-1498-427b-94a2-0d0cd9273d37",
+   "cell_type": "markdown",
+   "id": "aa60cee8-1c55-469f-ae2f-ed218555bee5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#tokenize each sentence into a list of words, removing punctuations and unnecessary characters altoghter"
+    "Tokenize each sentence into a list of words, removing punctuations and unnecessary characters altoghter"
    ]
   },
   {
@@ -1131,7 +862,7 @@
     "#If you want to see what word a given id corresponds to, pass the id as a key to the dictionary.\n",
     "id2word[4]\n",
     "\n",
-    "#in put of LDA"
+    "#input of LDA"
    ]
   },
   {
@@ -1455,7 +1186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Can take a long time to run.\n",
+    "# May take a long time to run.\n",
     "model_list, coherence_values = compute_coherence_values(dictionary=id2word, corpus=corpus, texts=tweet_lemmatized, start=2, limit=20, step=2)"
    ]
   },
@@ -2152,14 +1883,6 @@
     "# Show\n",
     "df_dominant_topics.head(8)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b446f62a-d44e-483e-a929-63ce48369ace",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -2178,7 +1901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
