--- a/exxon_mobil.ipynb
+++ b/exxon_mobil.ipynb
@@ -653,7 +653,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#forming a separate feature for cleaned tweets\n",
+    "#forming a separate column for cleaned tweets\n",
     "tweets['ctext'] = tweets['text'].apply(lambda x: p.clean(x))"
    ]
   },
