--- a/exxon_mobil.ipynb
+++ b/exxon_mobil.ipynb
@@ -2087,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 139,
    "id": "516bb6cf-553f-406f-a231-14692bd82442",
    "metadata": {},
    "outputs": [
@@ -2100,22 +2100,28 @@
        "https://t.co/D7doHYJapU     7\n",
        "https://t.co/wQD8SQx7lz     5\n",
        "https://t.co/9XbgTbeJiI     3\n",
-       "                           ..\n",
-       "https://t.co/Jza2LZ9wy7     1\n",
-       "https://t.co/K0Ini1mihL     1\n",
-       "https://t.co/K0hJFmyYYz     1\n",
-       "https://t.co/K2MjZwY1i1     1\n",
-       "https://t.co/zx3g1LB4mY     1\n",
-       "Length: 2478, dtype: int64"
+       "https://t.co/qcDVnBP5k0     3\n",
+       "https://t.co/cpMj8PhDKT     2\n",
+       "https://t.co/JfZO79eZzD     2\n",
+       "https://t.co/XlfcRIIMAu     2\n",
+       "https://t.co/P5nqzUFSy1     2\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "topic_1 = df_url[df_url['Topic'] == 1].pivot_table(columns=['urls'], aggfunc='size').sort_values(ascending=False)\n",
+    "#for i in range(10):\n",
+    "    lst = []\n",
+    "    lst.append(\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "topic_1 = df_url[df_url['Topic'] == 1].pivot_table(columns=['urls'], aggfunc='size').sort_values(ascending=False).head(10)\n",
     "topic_1"
    ]
   },
